[gd_scene load_steps=5 format=3 uid="uid://dhhmrp6fhgp30"]

[ext_resource type="Script" uid="uid://rj5eus1aj52l" path="res://scripts/interacting_component.gd" id="1_ofc3v"]
[ext_resource type="FontFile" uid="uid://1o4462pcke6p" path="res://sprites/font/PixelOperator8-Bold.ttf" id="2_syslh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_syslh"]
radius = 18.0

[sub_resource type="LabelSettings" id="LabelSettings_k2dsw"]
font = ExtResource("2_syslh")
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="interactingComponent" type="Node2D"]
z_index = 5
script = ExtResource("1_ofc3v")

[node name="interactRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="interactRange"]
shape = SubResource("CircleShape2D_syslh")

[node name="interactLabel" type="Label" parent="."]
z_index = 10
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.5
offset_top = -43.0
offset_right = 47.5
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
text = "Z to Interact"
label_settings = SubResource("LabelSettings_k2dsw")

[connection signal="area_entered" from="interactRange" to="." method="_on_interact_range_area_entered"]
[connection signal="area_exited" from="interactRange" to="." method="_on_interact_range_area_exited"]
